implement calendar alerts management with CRUD operations (#185)
* implement calendar alerts management with CRUD operations

* refactor: update grade retrieval and validation logic in feature files

* refactor: update grade retrieval and validation logic in feature files

* add unit tests for CalendarAlertDTO and CalendarAlertRequestDTO mappers

* implement cascading soft-delete service for hierarchical entities

* consolidate date validation tests using @ParameterizedTest

* update base URL in karate-config and clean up feature file scenarios

* remove redundant scenarios for forbidden class access in feature files

* remove redundant scenarios for forbidden class access in feature files

* remove redundant scenarios for forbidden class access in feature files