@@ -1,11 +1,9 @@
 package org.web.codefm.service.teachernotebook;
 
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.context.MessageSource;
 import org.web.codefm.domain.entity.teachernotebook.Class;
@@ -16,8 +14,9 @@ import org.web.codefm.domain.exception.teachernotebook.ClassForbiddenException;
 import org.web.codefm.domain.exception.teachernotebook.ClassNotFoundException;
 import org.web.codefm.domain.exception.teachernotebook.SubjectClassValidationException;
 import org.web.codefm.domain.i18n.MessageKeys;
-import org.web.codefm.domain.repository.teachernotebook.*;
-import org.web.codefm.domain.service.teachernotebook.ExerciseDocumentService;
+import org.web.codefm.domain.repository.teachernotebook.ClassRepository;
+import org.web.codefm.domain.repository.teachernotebook.SubjectClassRepository;
+import org.web.codefm.domain.repository.teachernotebook.SubjectRepository;
 import org.web.codefm.domain.session.SessionParameter;
 import org.web.codefm.domain.session.SessionUser;
 
@@ -37,12 +36,6 @@ class SubjectClassServiceImplTest {
     @Mock
     private SubjectRepository subjectRepository;
     @Mock
-    private ExerciseRepository exerciseRepository;
-    @Mock
-    private ExerciseStudentGradeRepository exerciseStudentGradeRepository;
-    @Mock
-    private ExerciseDocumentService exerciseDocumentService;
-    @Mock
     private MessageSource messageSource;
     @Mock
     private SessionUser sessionUser;
@@ -55,16 +48,6 @@ class SubjectClassServiceImplTest {
     private static final Integer SUBJECT_ID_1 = 100;
     private static final Integer SUBJECT_ID_2 = 101;
 
-    @BeforeEach
-    void setUp() {
-        MockitoAnnotations.openMocks(this);
-        subjectClassService = new SubjectClassServiceImpl(
-                subjectClassRepository, classRepository, subjectRepository, exerciseRepository, exerciseStudentGradeRepository, exerciseDocumentService, messageSource, sessionUser);
-        lenient().when(sessionUser.getParameter(SessionParameter.TEACHER_ID, Integer.class)).thenReturn(TEACHER_ID);
-        lenient().when(sessionUser.getLocale()).thenReturn(Locale.ENGLISH);
-        lenient().when(classRepository.findById(CLASS_ID)).thenReturn(Optional.of(Class.builder().id(CLASS_ID).build()));
-    }
-
     @Test
     void getSubjectsByClassId_shouldReturnSubjects_whenClassBelongsToTeacher() {
         Class clazz = Class.builder().id(CLASS_ID).schoolId(1).name("1A").build();
@@ -73,6 +56,9 @@ class SubjectClassServiceImplTest {
                 SubjectClassDetail.builder().subjectClassId(201).subjectId(SUBJECT_ID_2).subjectName("Science").build()
         );
 
+        lenient().when(sessionUser.getParameter(SessionParameter.TEACHER_ID, Integer.class)).thenReturn(TEACHER_ID);
+        lenient().when(sessionUser.getLocale()).thenReturn(Locale.ENGLISH);
+        when(classRepository.findById(CLASS_ID)).thenReturn(Optional.of(clazz));
         when(classRepository.findByIdAndTeacherIdAndDeletionDateIsNull(CLASS_ID, TEACHER_ID))
                 .thenReturn(Optional.of(clazz));
         when(subjectClassRepository.findSubjectsByClassId(CLASS_ID)).thenReturn(expectedSubjects);
@@ -87,7 +73,11 @@ class SubjectClassServiceImplTest {
 
     @Test
     void getSubjectsByClassId_shouldThrowNotFoundException_whenClassNotExists() {
+        lenient().when(sessionUser.getParameter(SessionParameter.TEACHER_ID, Integer.class)).thenReturn(TEACHER_ID);
+        lenient().when(sessionUser.getLocale()).thenReturn(Locale.ENGLISH);
         when(classRepository.findById(CLASS_ID)).thenReturn(Optional.empty());
+        when(messageSource.getMessage(eq(MessageKeys.CLASS_NOT_FOUND), any(), any(Locale.class)))
+                .thenReturn("Class not found");
 
         assertThrows(ClassNotFoundException.class, () -> subjectClassService.getSubjectsByClassId(CLASS_ID));
 
@@ -96,6 +86,10 @@ class SubjectClassServiceImplTest {
 
     @Test
     void getSubjectsByClassId_shouldThrowClassForbidden_whenClassDoesNotBelongToTeacher() {
+        Class clazz = Class.builder().id(CLASS_ID).schoolId(1).name("1A").build();
+        lenient().when(sessionUser.getParameter(SessionParameter.TEACHER_ID, Integer.class)).thenReturn(TEACHER_ID);
+        lenient().when(sessionUser.getLocale()).thenReturn(Locale.ENGLISH);
+        when(classRepository.findById(CLASS_ID)).thenReturn(Optional.of(clazz));
         when(classRepository.findByIdAndTeacherIdAndDeletionDateIsNull(CLASS_ID, TEACHER_ID))
                 .thenReturn(Optional.empty());
         when(messageSource.getMessage(eq(MessageKeys.CLASS_FORBIDDEN), any(), any(Locale.class)))
@@ -108,10 +102,11 @@ class SubjectClassServiceImplTest {
 
     @Test
     void getAllClassesWithSubjects_shouldReturnAllClassesWithSubjects() {
-        List<ClassWithSubjects> expectedResult = Arrays.asList(
+        lenient().when(sessionUser.getParameter(SessionParameter.TEACHER_ID, Integer.class)).thenReturn(TEACHER_ID);
+        List<ClassWithSubjects> expectedResult = List.of(
                 ClassWithSubjects.builder()
                         .classData(Class.builder().id(CLASS_ID).name("1A").build())
-                        .subjects(Arrays.asList(SubjectClassDetail.builder().subjectClassId(200).subjectId(SUBJECT_ID_1).subjectName("Math").build()))
+                        .subjects(List.of(SubjectClassDetail.builder().subjectClassId(200).subjectId(SUBJECT_ID_1).subjectName("Math").build()))
                         .build()
         );
 
@@ -133,6 +128,9 @@ class SubjectClassServiceImplTest {
                 SubjectClassDetail.builder().subjectClassId(201).subjectId(SUBJECT_ID_2).subjectName("Science").build()
         );
 
+        lenient().when(sessionUser.getParameter(SessionParameter.TEACHER_ID, Integer.class)).thenReturn(TEACHER_ID);
+        lenient().when(sessionUser.getLocale()).thenReturn(Locale.ENGLISH);
+        when(classRepository.findById(CLASS_ID)).thenReturn(Optional.of(clazz));
         when(classRepository.findByIdAndTeacherIdAndDeletionDateIsNull(CLASS_ID, TEACHER_ID))
                 .thenReturn(Optional.of(clazz));
         when(subjectRepository.findByIdAndTeacherId(SUBJECT_ID_1, TEACHER_ID))
@@ -153,6 +151,7 @@ class SubjectClassServiceImplTest {
 
     @Test
     void assignSubjectsToClass_shouldThrowValidationException_whenSubjectIdsEmpty() {
+        lenient().when(sessionUser.getLocale()).thenReturn(Locale.ENGLISH);
         when(messageSource.getMessage(eq(MessageKeys.SUBJECT_CLASS_SUBJECT_IDS_REQUIRED), any(), any(Locale.class)))
                 .thenReturn("Subject IDs required");
 
@@ -164,6 +163,7 @@ class SubjectClassServiceImplTest {
 
     @Test
     void assignSubjectsToClass_shouldThrowValidationException_whenSubjectIdsNull() {
+        lenient().when(sessionUser.getLocale()).thenReturn(Locale.ENGLISH);
         when(messageSource.getMessage(eq(MessageKeys.SUBJECT_CLASS_SUBJECT_IDS_REQUIRED), any(), any(Locale.class)))
                 .thenReturn("Subject IDs required");
 
@@ -176,8 +176,11 @@ class SubjectClassServiceImplTest {
     @Test
     void assignSubjectsToClass_shouldThrowValidationException_whenSubjectNotOwnedByTeacher() {
         Class clazz = Class.builder().id(CLASS_ID).schoolId(1).name("1A").build();
-        List<Integer> subjectIds = Arrays.asList(SUBJECT_ID_1);
+        List<Integer> subjectIds = List.of(SUBJECT_ID_1);
 
+        lenient().when(sessionUser.getParameter(SessionParameter.TEACHER_ID, Integer.class)).thenReturn(TEACHER_ID);
+        lenient().when(sessionUser.getLocale()).thenReturn(Locale.ENGLISH);
+        when(classRepository.findById(CLASS_ID)).thenReturn(Optional.of(clazz));
         when(classRepository.findByIdAndTeacherIdAndDeletionDateIsNull(CLASS_ID, TEACHER_ID))
                 .thenReturn(Optional.of(clazz));
         when(subjectRepository.findByIdAndTeacherId(SUBJECT_ID_1, TEACHER_ID))
@@ -195,8 +198,11 @@ class SubjectClassServiceImplTest {
     void assignSubjectsToClass_shouldThrowValidationException_whenSubjectAlreadyAssigned() {
         Class clazz = Class.builder().id(CLASS_ID).schoolId(1).name("1A").build();
         Subject subject = Subject.builder().id(SUBJECT_ID_1).name("Math").teacherId(TEACHER_ID).build();
-        List<Integer> subjectIds = Arrays.asList(SUBJECT_ID_1);
+        List<Integer> subjectIds = List.of(SUBJECT_ID_1);
 
+        lenient().when(sessionUser.getParameter(SessionParameter.TEACHER_ID, Integer.class)).thenReturn(TEACHER_ID);
+        lenient().when(sessionUser.getLocale()).thenReturn(Locale.ENGLISH);
+        when(classRepository.findById(CLASS_ID)).thenReturn(Optional.of(clazz));
         when(classRepository.findByIdAndTeacherIdAndDeletionDateIsNull(CLASS_ID, TEACHER_ID))
                 .thenReturn(Optional.of(clazz));
         when(subjectRepository.findByIdAndTeacherId(SUBJECT_ID_1, TEACHER_ID))
@@ -213,11 +219,91 @@ class SubjectClassServiceImplTest {
     }
 
     @Test
-    void removeSubjectsFromClass_shouldRemoveSubjectsAndCascadeDeleteExercises_whenClassBelongsToTeacher() {
+    void removeSubjectsFromClass_shouldCallSoftDelete() {
+        List<Integer> subjectIds = Arrays.asList(SUBJECT_ID_1, SUBJECT_ID_2);
+        doNothing().when(subjectClassRepository).softDeleteAll(CLASS_ID, subjectIds);
+
+        assertDoesNotThrow(() -> subjectClassService.removeSubjectsFromClass(CLASS_ID, subjectIds));
+
+        verify(subjectClassRepository).softDeleteAll(CLASS_ID, subjectIds);
+    }
+
+    @Test
+    void removeSubjectsFromClass_shouldThrowNotFoundException_whenClassNotExists() {
+        List<Integer> subjectIds = List.of(SUBJECT_ID_1);
+
+        lenient().when(sessionUser.getParameter(SessionParameter.TEACHER_ID, Integer.class)).thenReturn(TEACHER_ID);
+        lenient().when(sessionUser.getLocale()).thenReturn(Locale.ENGLISH);
+        when(classRepository.findById(CLASS_ID)).thenReturn(Optional.empty());
+        when(messageSource.getMessage(eq(MessageKeys.CLASS_NOT_FOUND), any(), any(Locale.class)))
+                .thenReturn("Class not found");
+
+        assertThrows(ClassNotFoundException.class,
+                () -> subjectClassService.findActiveSubjectClassIds(CLASS_ID, subjectIds));
+
+        verify(subjectClassRepository, never()).softDeleteAll(anyInt(), anyList());
+    }
+
+    @Test
+    void removeSubjectsFromClass_shouldThrowClassForbidden_whenClassDoesNotBelongToTeacher() {
+        Class clazz = Class.builder().id(CLASS_ID).schoolId(1).name("1A").build();
+        List<Integer> subjectIds = List.of(SUBJECT_ID_1);
+
+        lenient().when(sessionUser.getParameter(SessionParameter.TEACHER_ID, Integer.class)).thenReturn(TEACHER_ID);
+        lenient().when(sessionUser.getLocale()).thenReturn(Locale.ENGLISH);
+        when(classRepository.findById(CLASS_ID)).thenReturn(Optional.of(clazz));
+        when(classRepository.findByIdAndTeacherIdAndDeletionDateIsNull(CLASS_ID, TEACHER_ID))
+                .thenReturn(Optional.empty());
+        when(messageSource.getMessage(eq(MessageKeys.CLASS_FORBIDDEN), any(), any(Locale.class)))
+                .thenReturn("Forbidden");
+
+        assertThrows(ClassForbiddenException.class,
+                () -> subjectClassService.findActiveSubjectClassIds(CLASS_ID, subjectIds));
+
+        verify(subjectClassRepository, never()).softDeleteAll(any(), any());
+    }
+
+    @Test
+    void removeSubjectsFromClass_shouldThrowValidationException_whenSubjectIdsEmpty() {
+        lenient().when(sessionUser.getLocale()).thenReturn(Locale.ENGLISH);
+        when(messageSource.getMessage(eq(MessageKeys.SUBJECT_CLASS_SUBJECT_IDS_REQUIRED), any(), any(Locale.class)))
+                .thenReturn("Subject IDs required");
+
+        assertThrows(SubjectClassValidationException.class,
+                () -> subjectClassService.findActiveSubjectClassIds(CLASS_ID, new ArrayList<>()));
+
+        verify(subjectClassRepository, never()).softDeleteAll(any(), any());
+    }
+
+    @Test
+    void removeSubjectsFromClass_shouldThrowValidationException_whenAssociationDoesNotExist() {
+        Class clazz = Class.builder().id(CLASS_ID).schoolId(1).name("1A").build();
+        List<Integer> subjectIds = List.of(SUBJECT_ID_1);
+
+        lenient().when(sessionUser.getParameter(SessionParameter.TEACHER_ID, Integer.class)).thenReturn(TEACHER_ID);
+        lenient().when(sessionUser.getLocale()).thenReturn(Locale.ENGLISH);
+        when(classRepository.findById(CLASS_ID)).thenReturn(Optional.of(clazz));
+        when(classRepository.findByIdAndTeacherIdAndDeletionDateIsNull(CLASS_ID, TEACHER_ID))
+                .thenReturn(Optional.of(clazz));
+        when(subjectClassRepository.existsBySubjectIdAndClassIdAndDeletionDateIsNull(SUBJECT_ID_1, CLASS_ID))
+                .thenReturn(false);
+        when(messageSource.getMessage(eq(MessageKeys.SUBJECT_CLASS_NOT_FOUND), any(), any(Locale.class)))
+                .thenReturn("Subject not assigned to class");
+
+        assertThrows(SubjectClassValidationException.class,
+                () -> subjectClassService.findActiveSubjectClassIds(CLASS_ID, subjectIds));
+
+        verify(subjectClassRepository, never()).softDeleteAll(any(), any());
+    }
+
+    @Test
+    void findActiveSubjectClassIds_shouldReturnIds_whenAssociationsExist() {
         Class clazz = Class.builder().id(CLASS_ID).schoolId(1).name("1A").build();
         List<Integer> subjectIds = Arrays.asList(SUBJECT_ID_1, SUBJECT_ID_2);
-        List<Integer> subjectClassIds = Arrays.asList(200, 201);
 
+        lenient().when(sessionUser.getParameter(SessionParameter.TEACHER_ID, Integer.class)).thenReturn(TEACHER_ID);
+        lenient().when(sessionUser.getLocale()).thenReturn(Locale.ENGLISH);
+        when(classRepository.findById(CLASS_ID)).thenReturn(Optional.of(clazz));
         when(classRepository.findByIdAndTeacherIdAndDeletionDateIsNull(CLASS_ID, TEACHER_ID))
                 .thenReturn(Optional.of(clazz));
         when(subjectClassRepository.existsBySubjectIdAndClassIdAndDeletionDateIsNull(SUBJECT_ID_1, CLASS_ID))
@@ -228,95 +314,13 @@ class SubjectClassServiceImplTest {
                 .thenReturn(Optional.of(200));
         when(subjectClassRepository.findIdBySubjectIdAndClassId(SUBJECT_ID_2, CLASS_ID))
                 .thenReturn(Optional.of(201));
-        when(exerciseRepository.findActiveIdsBySubjectClassIds(subjectClassIds))
-                .thenReturn(Collections.emptyList());
-        doNothing().when(subjectClassRepository).softDeleteAll(CLASS_ID, subjectIds);
 
-        assertDoesNotThrow(() -> subjectClassService.removeSubjectsFromClass(CLASS_ID, subjectIds));
+        List<Integer> result = subjectClassService.findActiveSubjectClassIds(CLASS_ID, subjectIds);
 
-        verify(exerciseRepository).softDeleteBySubjectClassIds(subjectClassIds);
-        verify(exerciseDocumentService, never()).deleteDocumentsByExerciseIds(any());
-        verify(subjectClassRepository).softDeleteAll(CLASS_ID, subjectIds);
-    }
-
-    @Test
-    void removeSubjectsFromClass_shouldDeleteDocuments_whenExercisesExist() {
-        Class clazz = Class.builder().id(CLASS_ID).schoolId(1).name("1A").build();
-        List<Integer> subjectIds = Arrays.asList(SUBJECT_ID_1);
-        List<Integer> subjectClassIds = Arrays.asList(200);
-        List<Integer> exerciseIds = Arrays.asList(300, 301);
-
-        when(classRepository.findByIdAndTeacherIdAndDeletionDateIsNull(CLASS_ID, TEACHER_ID))
-                .thenReturn(Optional.of(clazz));
-        when(subjectClassRepository.existsBySubjectIdAndClassIdAndDeletionDateIsNull(SUBJECT_ID_1, CLASS_ID))
-                .thenReturn(true);
-        when(subjectClassRepository.findIdBySubjectIdAndClassId(SUBJECT_ID_1, CLASS_ID))
-                .thenReturn(Optional.of(200));
-        when(exerciseRepository.findActiveIdsBySubjectClassIds(subjectClassIds))
-                .thenReturn(exerciseIds);
-        doNothing().when(subjectClassRepository).softDeleteAll(CLASS_ID, subjectIds);
-
-        subjectClassService.removeSubjectsFromClass(CLASS_ID, subjectIds);
-
-        verify(exerciseDocumentService).deleteDocumentsByExerciseIds(exerciseIds);
-        verify(exerciseRepository).softDeleteBySubjectClassIds(subjectClassIds);
-        verify(subjectClassRepository).softDeleteAll(CLASS_ID, subjectIds);
-    }
-
-    @Test
-    void removeSubjectsFromClass_shouldThrowNotFoundException_whenClassNotExists() {
-        List<Integer> subjectIds = Arrays.asList(SUBJECT_ID_1);
-
-        when(classRepository.findById(CLASS_ID)).thenReturn(Optional.empty());
-
-        assertThrows(ClassNotFoundException.class,
-                () -> subjectClassService.removeSubjectsFromClass(CLASS_ID, subjectIds));
-
-        verify(subjectClassRepository, never()).softDeleteAll(anyInt(), anyList());
-    }
-
-    @Test
-    void removeSubjectsFromClass_shouldThrowClassForbidden_whenClassDoesNotBelongToTeacher() {
-        List<Integer> subjectIds = Arrays.asList(SUBJECT_ID_1);
-
-        when(classRepository.findByIdAndTeacherIdAndDeletionDateIsNull(CLASS_ID, TEACHER_ID))
-                .thenReturn(Optional.empty());
-        when(messageSource.getMessage(eq(MessageKeys.CLASS_FORBIDDEN), any(), any(Locale.class)))
-                .thenReturn("Forbidden");
-
-        assertThrows(ClassForbiddenException.class,
-                () -> subjectClassService.removeSubjectsFromClass(CLASS_ID, subjectIds));
-
-        verify(subjectClassRepository, never()).softDeleteAll(any(), any());
-    }
-
-    @Test
-    void removeSubjectsFromClass_shouldThrowValidationException_whenSubjectIdsEmpty() {
-        when(messageSource.getMessage(eq(MessageKeys.SUBJECT_CLASS_SUBJECT_IDS_REQUIRED), any(), any(Locale.class)))
-                .thenReturn("Subject IDs required");
-
-        assertThrows(SubjectClassValidationException.class,
-                () -> subjectClassService.removeSubjectsFromClass(CLASS_ID, new ArrayList<>()));
-
-        verify(subjectClassRepository, never()).softDeleteAll(any(), any());
-    }
-
-    @Test
-    void removeSubjectsFromClass_shouldThrowValidationException_whenAssociationDoesNotExist() {
-        Class clazz = Class.builder().id(CLASS_ID).schoolId(1).name("1A").build();
-        List<Integer> subjectIds = Arrays.asList(SUBJECT_ID_1);
-
-        when(classRepository.findByIdAndTeacherIdAndDeletionDateIsNull(CLASS_ID, TEACHER_ID))
-                .thenReturn(Optional.of(clazz));
-        when(subjectClassRepository.existsBySubjectIdAndClassIdAndDeletionDateIsNull(SUBJECT_ID_1, CLASS_ID))
-                .thenReturn(false);
-        when(messageSource.getMessage(eq(MessageKeys.SUBJECT_CLASS_NOT_FOUND), any(), any(Locale.class)))
-                .thenReturn("Subject not assigned to class");
-
-        assertThrows(SubjectClassValidationException.class,
-                () -> subjectClassService.removeSubjectsFromClass(CLASS_ID, subjectIds));
-
-        verify(subjectClassRepository, never()).softDeleteAll(any(), any());
+        assertNotNull(result);
+        assertEquals(2, result.size());
+        assertTrue(result.contains(200));
+        assertTrue(result.contains(201));
     }
 }
 
